--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -42,7 +42,7 @@ jobs:
     
     environment:
       name: production
-      url: ${{ steps.deployement.outputs.page_url }}
+      url: ${{ steps.deployment.outputs.page_url }}
     
     runs-on: ubuntu-latest
     
